# network-homework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.sh  build.sh  echo_epoll.sh  echo_uring.sh  stat.sh  telnet.sh
epoll_result/: result_1  result_10  result_100  result_50
examples/: CMakeLists.txt  echo.cpp  fileop.cpp  pingpong.cpp
fileop/: fileop.sh  write9
include/: Acceptor.h  Channel.h  EventLoop.h  EventLoopThread.h  EventLoopThreadPool.h  FILEOperator.h  LinuxHead.h  Poller.h  TCPConn.h  TCPServer.h  util.hpp
include/poll/: EpollPoller.h  UringPoller.h  UringPoller2.h
src/: Acceptor.cpp  CMakeLists.txt  Channel.cpp  EventLoop.cpp  EventLoopThread.cpp  EventLoopThreadPool.cpp  FILEOperator.cpp  TCPConn.cpp  TCPServer.cpp
src/poll/: DefaultPoller.cpp  EpollPoller.cpp  UringPoller.cpp  UringPoller2.cpp
test/: CMakeLists.txt  echo.cpp
uring_result/: result_1  result_10  result_100  result_50
